[gd_scene load_steps=5 format=3 uid="uid://ds0w34bd1klyc"]

[ext_resource type="Script" path="res://actors/enemy_bookshelf.gd" id="1_fnpbq"]
[ext_resource type="PackedScene" uid="uid://bsua44u4xw3x" path="res://character_models/bookshelf.blend" id="2_q3squ"]
[ext_resource type="Script" path="res://util_scripts/motion_interpolator_3d.gd" id="4_gh3lf"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vit8j"]
height = 1.0

[node name="EnemyBookshelf" type="CharacterBody3D" groups=["Enemy"]]
motion_mode = 1
script = ExtResource("1_fnpbq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_vit8j")

[node name="BookshelfModel" parent="." instance=ExtResource("2_q3squ")]

[node name="MotionInterpolator3D" type="Node3D" parent="BookshelfModel"]
process_priority = 1
process_physics_priority = 1
script = ExtResource("4_gh3lf")
target_path = NodePath("../..")

[node name="SneezeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="WanderTurnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="SneezeTimer" to="." method="_on_sneeze_timer_timeout"]
[connection signal="timeout" from="WanderTurnTimer" to="." method="_on_wander_turn_timer_timeout"]
